syntax = "proto3";

package proto;

option go_package = "github.com/angel/go-api-sqlite/proto";

import "google/protobuf/timestamp.proto";

service ItemService {
  rpc CreateItem(CreateItemRequest) returns (Item) {}
  rpc GetItem(GetItemRequest) returns (Item) {}
  rpc ListItems(ListItemsRequest) returns (ListItemsResponse) {}
  rpc UpdateItem(UpdateItemRequest) returns (Item) {}
  rpc DeleteItem(DeleteItemRequest) returns (DeleteItemResponse) {}
}

message Item {
  string id = 1;
  string name = 2;
  double value = 3;
  google.protobuf.Timestamp created_at = 4;
}

message CreateItemRequest {
  string name = 1;
  double value = 2;
}

message GetItemRequest {
  string id = 1;
}

message ListItemsRequest {
  // For future pagination
  int32 page_size = 1;
  string page_token = 2;
}

message ListItemsResponse {
  repeated Item items = 1;
  string next_page_token = 2;
}

message UpdateItemRequest {
  string id = 1;
  string name = 2;
  double value = 3;
}

message DeleteItemRequest {
  string id = 1;
}

message DeleteItemResponse {
  bool success = 1;
}
